--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,38 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Enclosures</title>
-  <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-  <h1>Enclosures</h1>
-</body>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Enclosures</title>
+    <link rel="stylesheet" href="./style.css">
+  </head>
+  <body>
+
+    <div id="qa-block" class="border blue">
+      <div class="border yellow">
+        <div class="text border">
+          In programming languages, a closure is a technique for implementing lexically scoped name binding in a language with first-class functions. Operationally, a closure is a record storing a function together with an environment.
+        </div>
+      </div>
+    </div>
+
+    <div class="border blue">
+      <div class="border yellow">
+        <div class="text border">
+          У програмуванні замиканням називають підпрограму, що виконується в середовищі, яке містить одну або більше зв’язаних змінних. Підпрограма має доступ до цих змінних під час виконання.
+        </div>
+      </div>
+    </div>
+
+    <div class="border blue">
+      <div class="border yellow">
+        <div class="text border">
+          Замыкание в программировании — функция первого класса, в теле которой присутствуют ссылки на переменные, объявленные вне тела этой функции в окружающем коде и не являющиеся её параметрами.
+        </div>
+      </div>
+    </div>
+
+  </body>
 </html>
