--- a/src/index.html
+++ b/src/index.html
@@ -11,24 +11,24 @@
   <body>
 
     <div id="qa-block" class="border blue">
-      <div class="border yellow">
-        <div class="text border">
+      <div class="border yellow box">
+        <div class="text border box">
           In programming languages, a closure is a technique for implementing lexically scoped name binding in a language with first-class functions. Operationally, a closure is a record storing a function together with an environment.
         </div>
       </div>
     </div>
 
     <div class="border blue">
-      <div class="border yellow">
-        <div class="text border">
+      <div class="border yellow box">
+        <div class="text border box">
           У програмуванні замиканням називають підпрограму, що виконується в середовищі, яке містить одну або більше зв’язаних змінних. Підпрограма має доступ до цих змінних під час виконання.
         </div>
       </div>
     </div>
 
     <div class="border blue">
-      <div class="border yellow">
-        <div class="text border">
+      <div class="border yellow box">
+        <div class="text border box">
           Замыкание в программировании — функция первого класса, в теле которой присутствуют ссылки на переменные, объявленные вне тела этой функции в окружающем коде и не являющиеся её параметрами.
         </div>
       </div>
